tweak index links

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -74,15 +74,15 @@
 
   <h3 class="heading-medium">Professions</h3>
   <ul>
-    <li><a href="/professions/hub">a profession's hub page (finance)</a></li>
+    <li><a href="/professions/hub">a profession's hub page</a> (finance)</li>
     <li><a href="/professions/tech_hub">digital profession hub page</a></li>
   </ul>
 
   <h3 class="heading-medium">Day to day</h3>
   <ul>
-    <li><a href="/being_a_civil_servant/addreceipt">add receipt (not complete)</a></li>
-    <li><a href="/signup/hr_dashboard">HR dashboard (not complete)</a></li>
-    <li><a href="/signup/scs_dashboard">SCS dashboard (not complete)</a></li>
+    <li><a href="/being_a_civil_servant/addreceipt">add receipt</a> (not complete)</li>
+    <li><a href="/signup/hr_dashboard">HR dashboard</a> (not complete)</li>
+    <li><a href="/signup/scs_dashboard">SCS dashboard</a> (not complete)</li>
   </ul>
 
   <h3 class="heading-medium">Performance</h3>
