add filter options, preset to SCS

--- a/application/signup/templates/scs_data.html
+++ b/application/signup/templates/scs_data.html
@@ -3,6 +3,37 @@
 
 <main id="content" role="main">
   <h1 class="heading-large">SCS stats</h1>
+
+  <form action="">
+    <div class="form-group">
+      <label for="" class="form-label">Department</label>
+      <select name="" id="" class="form-control">
+        <option value="all">-- All --</option>
+        <option value="cabinet-office">Cabinet Office</option>
+        <option value="dfid">Department for International Development</option>
+        <option value="moj">Ministry of Justice</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="" class="form-label">Grade</label>
+      <select name="" id="" class="form-control">
+        <option value="all">-- All --</option>
+        <option value="a">Grade A</option>
+        <option value="b">Grade B</option>
+        <option value="level7">Level 7</option>
+        <option value="scs" selected>SCS</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="" class="form-label">Location</label>
+      <select name="" id="" class="form-control">
+        <option value="all">-- All --</option>
+        <option value="leeds">Leeds</option>
+        <option value="london">London</option>
+        <option value="newcastle">Newcastle</option>
+      </select>
+    </div>
+  </form>
 </main>
 
 {% endblock %}
