--- a/application/signup/templates/basicprofile_checklist.html
+++ b/application/signup/templates/basicprofile_checklist.html
@@ -84,6 +84,28 @@
       <details class="cl_item">
         <summary class="cl_item__head cl_item__status">First day details</summary>
         <div class="cl_item__content">
+          <div class="grid-row">
+            <div class="column-half">
+              <dl>
+                <dt class="heading-small">Contact</dt>
+                <dd>Dave Mann</dd>
+                <dd><a href="mailto:" class="foot-link">david.mann@digital.cabinet-office.gov.uk</a></dd>
+
+                <dt class="heading-small">Address</dt>
+                <dd>Aviation House</dd>
+                <dd>Holborn</dd>
+                <dd>London</dd>
+                <dd>ECxxxx</dd>
+
+                <dt class="heading-small">Date & time</dt>
+                <dd>Tues 11th August</dd>
+                <dd>9:30 am</dd>
+              </dl>
+            </div>
+            <div class="column-half">
+              <a href="https://www.google.co.uk/maps/place/Aviation+House/@51.5194131,-0.1237179,14.78z"><img class="image" src="/signup/static/images/Aviation_House.png" alt="" /></a>
+            </div>
+          </div>
           <a href="/signup/csprofile" class="button">Go to profile</a>
         </div>
       </details>
