--- a/application/signup/templates/partials/profile/key-info.html
+++ b/application/signup/templates/partials/profile/key-info.html
@@ -3,7 +3,7 @@
     <tbody>
       <tr>
         <td class="key-info__type">Role:</td>
-        <td>Front-end designer</td>
+        <td>{{ profile.data.role }}</td>
       </tr>
       <tr>
         <td class="key-info__type">Team:</td>
