add location data

--- a/application/signup/templates/partials/profile/key-info.html
+++ b/application/signup/templates/partials/profile/key-info.html
@@ -15,7 +15,7 @@
       </tr>
       <tr>
         <td class="key-info__type">Location:</td>
-        <td>Aviation House, Holborn, London</td>
+        <td>{{ profile.data.location }}</td>
       </tr>
     </tbody>
   </table>
