--- a/application/signup/templates/profile.html
+++ b/application/signup/templates/profile.html
@@ -25,7 +25,9 @@
         <section class="component__wrap">
           <h4 class="heading-medium component__head">Availability</h4>
           <div class="column-half component--inner">{% include "partials/week_availability.html" ignore missing %}</div>
+          {% if profile.data.next_meeting is defined %}
           <div class="column-half component--inner">{% include "partials/profile/next-meeting.html" ignore missing %}</div>
+          {% endif %}
         </section>
       </div>
       <section class="component">
