hook up people finder

--- a/application/signup/templates/partials/people_finder.html
+++ b/application/signup/templates/partials/people_finder.html
@@ -3,7 +3,7 @@
     Civil Service people finder
   </h4>
   <p>Search by name, department or profession</p>
-  <form action="" class="form">
+  <form action="" class="form people-finder-form">
     <div class="form-group people-finder-search">
       <label class="people-finder-label" for="person-search">Search across government</label>
       <input list="civil-servants" type="text" class="people-finder-input" id="person-search">
