--- a/application/signup/templates/basicprofile_checklist.html
+++ b/application/signup/templates/basicprofile_checklist.html
@@ -93,9 +93,10 @@
 
                 <dt class="heading-small">Address</dt>
                 <dd>Aviation House</dd>
+                <dd>125 Kingsway</dd>
                 <dd>Holborn</dd>
                 <dd>London</dd>
-                <dd>ECxxxx</dd>
+                <dd>WC2B 6NH</dd>
 
                 <dt class="heading-small">Date & time</dt>
                 <dd>Tues 11th August</dd>
@@ -103,10 +104,15 @@
               </dl>
             </div>
             <div class="column-half">
-              <a href="https://www.google.co.uk/maps/place/Aviation+House/@51.5194131,-0.1237179,14.78z"><img class="image" src="/signup/static/images/Aviation_House.png" alt="" /></a>
+              <div class="cl_item__content--map">
+                <a href="https://www.google.co.uk/maps/place/Aviation+House/@51.5194131,-0.1237179,14.78z">
+                  <img class="image" src="/signup/static/images/Aviation_House.png" alt="" />
+                </a>
+                <a class="foot-link" href="https://www.google.co.uk/maps/place/Aviation+House/@51.5194131,-0.1237179,14.78z">see in maps</a>
+              </div>
             </div>
           </div>
-          <a href="/signup/csprofile" class="button">Go to profile</a>
+          <a href="/signup/csprofile" class="button cl-btn">Visit your profile</a>
         </div>
       </details>
     </div>
