--- a/application/signup/templates/scs_data.html
+++ b/application/signup/templates/scs_data.html
@@ -4,7 +4,7 @@
 <main id="content" role="main">
   <h1 class="heading-large">SCS stats</h1>
 
-  <form action="">
+  <form class="form" action="">
     <div class="form-group">
       <label for="" class="form-label">Department</label>
       <select name="" id="" class="form-control">
@@ -34,6 +34,127 @@
       </select>
     </div>
   </form>
+
+  <section class="section">
+    <h3 class="heading-medium">Cabinet Office</h3>
+    <table class="scs-table">
+      <thead>
+        <!--<tr>
+          <th colspan="2"></th>
+        </tr>-->
+      </thead>
+      <tbody>
+        <tr>
+          <td><img src="http://placehold.it/50x50" alt="" /></td>
+          <td>Jonathan Jones</td>
+          <td>HM Procurator General</td>
+          <td>5 yrs</td>
+          <td>London</td>
+          <td>£160,000</td>
+        </tr>
+        <tr class="expandable">
+          <td colspan="6">
+            <div class="grid-row expandable-content">
+              <div class="column-half">
+                <h4 class="heading-small expandable-content__heading">Skills & Expertise</h4>
+                <ul class="jd__assoc-skills">
+                    <li class="skill" data-skill="Agile">Agile</li>
+                    <li class="skill" data-skill="Communication">Communication</li>
+                    <li class="skill" data-skill="Leadership">Leadership</li>
+                    <li class="skill" data-skill="Decision making">Decision making</li>
+                    <li class="skill" data-skill="Stakeholder engagement">Stakeholder engagement</li>
+                    <li class="skill" data-skill="Problem solving">Problem solving</li>
+                    <li class="skill" data-skill="People management">People management</li>
+                    <li class="skill" data-skill="Resourcing">Resourcing</li>
+                    <li class="skill" data-skill="Delivery">Delivery</li>
+                    <li class="skill" data-skill="Performance management">Performance management</li>
+                    <li class="skill" data-skill="Business intelligence">Business intelligence</li>
+                    <li class="skill" data-skill="Javascript">Business analysis</li>
+                  </ul>
+              </div>
+              <div class="column-half">
+                <div class="grid-row">
+                  <div class="column-two-thirds">
+                    <dl class="definition-inline scs_info_item">
+                      <dt>Potential successor</dt>
+                      <dd>Joe Bloggs</dd>
+                    </dl>
+                  </div>
+                  <div class="column-third">
+                    <button class="secondary--btn">change</button>
+                  </div>
+                </div>
+                <dl class="definition-inline scs_info_item">
+                  <dt>Past organisations:</dt>
+                  <dd>Cabinet office, Ministry of Justice, Ministry of Defence, Attorney General's Office</dd>
+                </dl>
+              </div>
+            </div>
+          </td>
+        </tr>
+
+        <tr>
+          <td><img src="http://placehold.it/50x50" alt="" /></td>
+          <td>Joe Bloggs</td>
+          <td>Deputy Director</td>
+          <td>8 yrs</td>
+          <td>London</td>
+          <td>£67,000</td>
+        </tr>
+        <tr class="expandable">
+          <td colspan="6"></td>
+        </tr>
+
+        <tr class="secondment">
+          <td><img src="http://placehold.it/50x50" alt="" /></td>
+          <td>Joe Bloggs</td>
+          <td>On secondment with ...</td>
+          <td>1.2 yrs</td>
+          <td>London</td>
+          <td>n/a</td>
+        </tr>
+        <tr class="expandable">
+          <td colspan="6"></td>
+        </tr>
+
+      </tbody>
+    </table>
+
+    <h3 class="heading-medium">Department of Health</h3>
+    <table>
+      <thead>
+        <!--<tr>
+          <th colspan="2"></th>
+        </tr>-->
+      </thead>
+      <tbody>
+        <tr>
+          <td><img src="http://placehold.it/50x50" alt="" /></td>
+          <td>Joe Bloggs</td>
+          <td>Deputy Director</td>
+          <td>8 yrs</td>
+          <td>London</td>
+          <td>£67,000</td>
+        </tr>
+        <tr>
+          <td><img src="http://placehold.it/50x50" alt="" /></td>
+          <td>Joe Bloggs</td>
+          <td>Deputy Director</td>
+          <td>8 yrs</td>
+          <td>London</td>
+          <td>£67,000</td>
+        </tr>
+        <tr>
+          <td><img src="http://placehold.it/50x50" alt="" /></td>
+          <td>Joe Bloggs</td>
+          <td>Deputy Director</td>
+          <td>8 yrs</td>
+          <td>London</td>
+          <td>£67,000</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 </main>
 
 {% endblock %}
