--- a/application/signup/templates/hr_dashboard_cost.html
+++ b/application/signup/templates/hr_dashboard_cost.html
@@ -13,7 +13,69 @@
     </div>
 
     <div class="column-three-quarter">
-      <div class="component"></div>
+      <div class="component">
+
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Median Earnings</h3>
+          <div class="grid-row metric__group">
+            <div class="column-third metric">
+              <h3 class="heading-small">All</h3>
+              <span class="metric__value">£24,730</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl class="target--down">
+                    <dt>Target</dt>
+                    <dd>3.8%</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>2.0%</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="column-third metric">
+              <h3 class="heading-small">Male</h3>
+              <span class="metric__value">£27,340</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl>
+                    <dt>Target</dt>
+                    <dd>96%</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>94%</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="column-third metric">
+              <h3 class="heading-small">Female</h3>
+              <span class="metric__value">£23,630</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl>
+                    <dt></dt>
+                    <dd></dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt></dt>
+                    <dd></dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+          </div><!-- end grid-row -->
+        </div>
+
+      </div>
     </div>
   </div>
 
