add salary decile info

--- a/application/signup/static/css/hr.scss
+++ b/application/signup/static/css/hr.scss
@@ -12,6 +12,8 @@
 @import 'hr_components/component';
 @import 'hr_components/key-metric';
 
+@import 'components/table';
+
 body {
   background: $grey-4;
 }
