--- a/application/signup/templates/hr_dashboard_cost.html
+++ b/application/signup/templates/hr_dashboard_cost.html
@@ -75,6 +75,66 @@
           </div><!-- end grid-row -->
         </div>
 
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Salary Deciles</h3>
+          <table class="table--borderless">
+            <thead>
+              <tr>
+                <th>Decile</th>
+                <th>Avg salary</th>
+                <th class="numeric">Change on last yr</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>£18,020</td>
+                <td class="numeric">up 1%</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>£19,090</td>
+                <td class="numeric">up 0.2%</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>£20,450</td>
+                <td class="numeric">up 2.8%</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>£22,970</td>
+                <td class="numeric">up 0.3%</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>£24,730</td>
+                <td class="numeric">down 1%</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>£27,370</td>
+                <td class="numeric">up 1.2%</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>£30,010</td>
+                <td class="numeric">up 1%</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>£35,000</td>
+                <td class="numeric">down 0.8%</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>£45,780</td>
+                <td class="numeric">up 2.5%</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
       </div>
     </div>
   </div>
