add responsibility data

--- a/application/signup/templates/hr_dashboard_capability.html
+++ b/application/signup/templates/hr_dashboard_capability.html
@@ -13,7 +13,54 @@
     </div>
 
     <div class="column-three-quarter">
-      <div class="component"></div>
+      <div class="component">
+
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Responsibility level</h3>
+          <table class="table--borderless">
+            <thead>
+              <tr>
+                <th>Vs 2014</th>
+                <th class="cell--center">Level</th>
+                <th class="numeric">Headcount</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>up 1.3%</td>
+                <td class="cell--center">Senior Civil Servant</td>
+                <td class="numeric">4,850</td>
+              </tr>
+              <tr>
+                <td>down 3.6%</td>
+                <td class="cell--center">Grades 6 and 7</td>
+                <td class="numeric">37,780</td>
+              </tr>
+              <tr>
+                <td>up 0.3%</td>
+                <td class="cell--center">Senior and Higher Executive Officers</td>
+                <td class="numeric">100,060</td>
+              </tr>
+              <tr>
+                <td>up 4.4%</td>
+                <td class="cell--center">Executive Officers</td>
+                <td class="numeric">115,600</td>
+              </tr>
+              <tr>
+                <td>up 3.2%</td>
+                <td class="cell--center">Administrative Officers and Assistants</td>
+                <td class="numeric">178,920</td>
+              </tr>
+              <tr>
+                <td>down 7%</td>
+                <td class="cell--center">Not Reported</td>
+                <td class="numeric">2,730</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+      </div>
     </div>
   </div>
 
