add disability data

--- a/application/signup/templates/hr_dashboard_diversity.html
+++ b/application/signup/templates/hr_dashboard_diversity.html
@@ -49,7 +49,39 @@
           </div><!-- end grid-row -->
         </div>
 
-        
+        <!-- Disability -->
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Disability</h3>
+          <div class="grid-row metric__group">
+            <div class="column-third metric">
+              <span class="metric__value">9%</span>
+              <p>Disabled employees as percentage of known disability status</p>
+            </div>
+            <div class="column-two-thirds metric">
+              <h3 class="heading-small">Breakdown</h3>
+              <table class="table--borderless">
+                <tbody>
+                  <tr>
+                    <td>Disabled</td>
+                    <td class="numeric">26,580</td>
+                  </tr>
+                  <tr>
+                    <td>Non-disabled</td>
+                    <td class="numeric">274,300</td>
+                  </tr>
+                  <tr>
+                    <td>Not Declared</td>
+                    <td class="numeric">100,640</td>
+                  </tr>
+                  <tr>
+                    <td>Not Known</td>
+                    <td class="numeric">38,430</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div><!-- end grid-row -->
+        </div>
       </div>
     </div>
   </div>
