tweak the working pattern data

--- a/application/signup/templates/hr_dashboard.html
+++ b/application/signup/templates/hr_dashboard.html
@@ -55,22 +55,28 @@
               </div>
             </div>
             <div class="column-third metric">
-              <h3 class="heading-small">Sabbatical</h3>
-              <span class="metric__value">2,368</span>
-              <div class="grid-row">
-                <div class="column-half">
-                  <dl>
-                    <dt></dt>
-                    <dd></dd>
-                  </dl>
-                </div>
-                <div class="column-half">
-                  <dl>
-                    <dt></dt>
-                    <dd></dd>
-                  </dl>
-                </div>
-              </div>
+              <h3 class="heading-small">Working pattern</h3>
+              <table class="table--borderless">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th class="numeric">Headcount</th>
+                    <th class="numeric">%</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Full-time</td>
+                    <td class="numeric">332,690</td>
+                    <td class="numeric">76</td>
+                  </tr>
+                  <tr>
+                    <td>Part-time</td>
+                    <td class="numeric">107,250</td>
+                    <td class="numeric">24</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div><!-- end grid-row -->
         </div>
