--- a/application/signup/templates/hr_dashboard_capability.html
+++ b/application/signup/templates/hr_dashboard_capability.html
@@ -58,6 +58,66 @@
               </tr>
             </tbody>
           </table>
+        </div> <!-- end grouping -->
+
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Key capability growth</h3>
+          <div class="grid-row metric__group">
+            <div class="column-third metric">
+              <h3 class="heading-small">Digital</h3>
+              <span class="metric__value">42%</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl class="target--down">
+                    <dt>Target</dt>
+                    <dd>60%</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>35%</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="column-third metric">
+              <h3 class="heading-small">Agile</h3>
+              <span class="metric__value">23%</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl>
+                    <dt>Target</dt>
+                    <dd>35%</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>17%</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="column-third metric">
+              <h3 class="heading-small">Working pattern</h3>
+              <span class="metric__value">23%</span>
+              <div class="grid-row">
+                <div class="column-half">
+                  <dl>
+                    <dt>Target</dt>
+                    <dd>35%</dd>
+                  </dl>
+                </div>
+                <div class="column-half">
+                  <dl>
+                    <dt>Last Year</dt>
+                    <dd>17%</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+          </div><!-- end grid-row -->
         </div>
 
       </div>
