update key capability

--- a/application/signup/templates/hr_dashboard_capability.html
+++ b/application/signup/templates/hr_dashboard_capability.html
@@ -100,19 +100,19 @@
               </div>
             </div>
             <div class="column-third metric">
-              <h3 class="heading-small">Working pattern</h3>
-              <span class="metric__value">23%</span>
+              <h3 class="heading-small">Leadership</h3>
+              <span class="metric__value">34%</span>
               <div class="grid-row">
                 <div class="column-half">
                   <dl>
                     <dt>Target</dt>
-                    <dd>35%</dd>
+                    <dd>50%</dd>
                   </dl>
                 </div>
                 <div class="column-half">
                   <dl>
                     <dt>Last Year</dt>
-                    <dd>17%</dd>
+                    <dd>30%</dd>
                   </dl>
                 </div>
               </div>
